force-app/main/default/objects/Antenna__c/Antenna__c.object-meta.xml
<CustomObject>
    <label>Antenna</label>
    <nameField>
        <label>Antenna Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Antennas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>