force-app/main/default/objects/Antenna__c/fields/AC_Power__c.field-meta.xml
<CustomField>
    <fullName>AC_Power__c</fullName>
    <label>AC Power</label>
    <length>255</length>
    <type>Text</type>
</CustomField>