force-app/main/default/objects/Antenna__c/fields/Additional_Information_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Information_Comments__c</fullName>
    <label>Additional Information/Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>