force-app/main/default/objects/Antenna__c/fields/Antenna_Dimensions_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Dimensions_Sector_2__c</fullName>
    <label>Antenna Dimensions - Sector 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>