force-app/main/default/objects/Antenna__c/fields/Antenna_Gain_Db_Sector_4_Other__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Gain_Db_Sector_4_Other__c</fullName>
    <label>Antenna Gain (Db) - Sector 4/Other</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>