force-app/main/default/objects/Antenna__c/fields/Antenna_Manufacturer_MW__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Manufacturer_MW__c</fullName>
    <label>Antenna Manufacturer MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>