force-app/main/default/objects/Antenna__c/fields/Antenna_Manufacturer_Sector_4_Other__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Manufacturer_Sector_4_Other__c</fullName>
    <label>Antenna Manufacturer - Sector 4/Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>