force-app/main/default/objects/Antenna__c/fields/Antenna_Model_MW__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Model_MW__c</fullName>
    <label>Antenna Model - MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>