force-app/main/default/objects/Antenna__c/fields/Antenna_Model_Sector_3__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Model_Sector_3__c</fullName>
    <label>Antenna Model - Sector 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>