force-app/main/default/objects/Antenna__c/fields/Antenna_Quantity_MW__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Quantity_MW__c</fullName>
    <label>Antenna Quantity - MW</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>