force-app/main/default/objects/Antenna__c/fields/Antenna_Quantity_Sector_1__c.field-meta.xml
<CustomField>
    <fullName>Antenna_Quantity_Sector_1__c</fullName>
    <label>Antenna Quantity - Sector 1</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>