force-app/main/default/objects/Antenna__c/fields/Applicant_Address__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Address__c</fullName>
    <label>Applicant Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>