force-app/main/default/objects/Antenna__c/fields/Applicant_Email__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Email__c</fullName>
    <label>Applicant Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>