force-app/main/default/objects/Antenna__c/fields/Applicant_Entity_Name_on_SA__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Entity_Name_on_SA__c</fullName>
    <label>Applicant Entity Name on SA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>