force-app/main/default/objects/Antenna__c/fields/Applicant_Phone__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Phone__c</fullName>
    <label>Applicant Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>