force-app/main/default/objects/Antenna__c/fields/Applicant_Title__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Title__c</fullName>
    <label>Applicant Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>