force-app/main/default/objects/Antenna__c/fields/Cabinet_BTS_Shelter_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_BTS_Shelter_Dimensions__c</fullName>
    <label>Cabinet/BTS/Shelter Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>