force-app/main/default/objects/Antenna__c/fields/Cabinet_Shelter_Manufacturer_Model__c.field-meta.xml
<CustomField>
    <fullName>Cabinet_Shelter_Manufacturer_Model__c</fullName>
    <label>Cabinet/Shelter Manufacturer/Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>