force-app/main/default/objects/Antenna__c/fields/Capacity_KW__c.field-meta.xml
<CustomField>
    <fullName>Capacity_KW__c</fullName>
    <label>Capacity (KW)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>