force-app/main/default/objects/Antenna__c/fields/Concrete_Pad_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Concrete_Pad_Dimensions__c</fullName>
    <label>Concrete Pad Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>