force-app/main/default/objects/Antenna__c/fields/Construction_Contact_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Construction_Contact_Name_Number__c</fullName>
    <label>Construction Contact Name/Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>