force-app/main/default/objects/Antenna__c/fields/Desired_Rad_Center_MW__c.field-meta.xml
<CustomField>
    <fullName>Desired_Rad_Center_MW__c</fullName>
    <label>Desired Rad Center - MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>