force-app/main/default/objects/Antenna__c/fields/Desired_Rad_Center_Sector_4_Other__c.field-meta.xml
<CustomField>
    <fullName>Desired_Rad_Center_Sector_4_Other__c</fullName>
    <label>Desired Rad Center - Sector 4/Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>