force-app/main/default/objects/Antenna__c/fields/Diplexer_Dimensions_MW__c.field-meta.xml
<CustomField>
    <fullName>Diplexer_Dimensions_MW__c</fullName>
    <label>Diplexer Dimensions - MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>