force-app/main/default/objects/Antenna__c/fields/Diplexer_Dimensions_Sector_1__c.field-meta.xml
<CustomField>
    <fullName>Diplexer_Dimensions_Sector_1__c</fullName>
    <label>Diplexer Dimensions - Sector 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>