force-app/main/default/objects/Antenna__c/fields/Diplexer_Dimensions_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>Diplexer_Dimensions_Sector_2__c</fullName>
    <label>Diplexer Dimensions - Sector 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>