force-app/main/default/objects/Antenna__c/fields/Diplexer_Manufacturer_Model_S_4_Othr__c.field-meta.xml
<CustomField>
    <fullName>Diplexer_Manufacturer_Model_S_4_Othr__c</fullName>
    <label>Diplexer Manufacturer&amp;Model -S 4/Othr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>