force-app/main/default/objects/Antenna__c/fields/Diplexer_Manufacturer_Model_Sect_2__c.field-meta.xml
<CustomField>
    <fullName>Diplexer_Manufacturer_Model_Sect_2__c</fullName>
    <label>Diplexer Manufacturer &amp; Model -Sect 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>