force-app/main/default/objects/Antenna__c/fields/Diplexer_Quantity_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>Diplexer_Quantity_Sector_2__c</fullName>
    <label>Diplexer Quantity - Sector 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>