force-app/main/default/objects/Antenna__c/fields/Emergency_Contact_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Name_Number__c</fullName>
    <label>Emergency Contact Name/Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>