force-app/main/default/objects/Antenna__c/fields/Equipment_Enclosure_Type__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Enclosure_Type__c</fullName>
    <label>Equipment Enclosure Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>