force-app/main/default/objects/Antenna__c/fields/ERP_watts_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>ERP_watts_Sector_2__c</fullName>
    <label>ERP (watts) - Sector 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>