force-app/main/default/objects/Antenna__c/fields/Fuel_Tank_Location__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Tank_Location__c</fullName>
    <label>Fuel Tank Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>