force-app/main/default/objects/Antenna__c/fields/Generator_Ground_Space_Requirement__c.field-meta.xml
<CustomField>
    <fullName>Generator_Ground_Space_Requirement__c</fullName>
    <label>Generator Ground Space Requirement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>