force-app/main/default/objects/Antenna__c/fields/Leased_Area_Dimensions__c.field-meta.xml
<CustomField>
    <fullName>Leased_Area_Dimensions__c</fullName>
    <label>Leased Area Dimensions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>