force-app/main/default/objects/Antenna__c/fields/Leasing_Contact_Name_Number_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Leasing_Contact_Name_Number_E_mail__c</fullName>
    <label>Leasing Contact Name/Number/E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>