force-app/main/default/objects/Antenna__c/fields/Legal_Review_Contact_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Legal_Review_Contact_Name_Number__c</fullName>
    <label>Legal Review Contact Name/Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>