force-app/main/default/objects/Antenna__c/fields/Line_Size_of_Cables_in_S_4_Other__c.field-meta.xml
<CustomField>
    <fullName>Line_Size_of_Cables_in_S_4_Other__c</fullName>
    <label>Line Size of Cables (in) - S 4/Other</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>