force-app/main/default/objects/Antenna__c/fields/Line_Size_of_Cables_in_Sector_3__c.field-meta.xml
<CustomField>
    <fullName>Line_Size_of_Cables_in_Sector_3__c</fullName>
    <label>Line Size of Cables (in) - Sector 3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>