force-app/main/default/objects/Antenna__c/fields/Line_type_size_of_RET_Cont_Cable_Sec_2__c.field-meta.xml
<CustomField>
    <fullName>Line_type_size_of_RET_Cont_Cable_Sec_2__c</fullName>
    <label>Line type/size of RET Cont Cable - Sec 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>