force-app/main/default/objects/Antenna__c/fields/Line_type_size_RET_Cont_Cable_S4_Othr__c.field-meta.xml
<CustomField>
    <fullName>Line_type_size_RET_Cont_Cable_S4_Othr__c</fullName>
    <label>Line type/size RET Cont Cable - S4/Othr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>