force-app/main/default/objects/Antenna__c/fields/Mechanical_Tilt_MW__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Tilt_MW__c</fullName>
    <label>Mechanical Tilt - MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>