force-app/main/default/objects/Antenna__c/fields/Mechanical_Tilt_Sector_1__c.field-meta.xml
<CustomField>
    <fullName>Mechanical_Tilt_Sector_1__c</fullName>
    <label>Mechanical Tilt - Sector 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>