force-app/main/default/objects/Antenna__c/fields/Mount_Mfg_and_Model_Sector_4_Other__c.field-meta.xml
<CustomField>
    <fullName>Mount_Mfg_and_Model_Sector_4_Other__c</fullName>
    <label>Mount Mfg and Model - Sector 4/Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>