force-app/main/default/objects/Antenna__c/fields/Notice_Address__c.field-meta.xml
<CustomField>
    <fullName>Notice_Address__c</fullName>
    <label>Notice Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>