force-app/main/default/objects/Antenna__c/fields/Orientation_Azimuth_Degrees_MW__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Azimuth_Degrees_MW__c</fullName>
    <label>Orientation/Azimuth (Degrees) - MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>