force-app/main/default/objects/Antenna__c/fields/Orientation_Azimuth_Degrees_S_2__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Azimuth_Degrees_S_2__c</fullName>
    <label>Orientation/Azimuth (Degrees) - S 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>