force-app/main/default/objects/Antenna__c/fields/Orientation_Azimuth_Sect_4_Othr__c.field-meta.xml
<CustomField>
    <fullName>Orientation_Azimuth_Sect_4_Othr__c</fullName>
    <label>Orientation/Azimuth - Sect 4/Othr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>