force-app/main/default/objects/Antenna__c/fields/Other_MW__c.field-meta.xml
<CustomField>
    <fullName>Other_MW__c</fullName>
    <label>Other - MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>