force-app/main/default/objects/Antenna__c/fields/Other_Sector4_Other__c.field-meta.xml
<CustomField>
    <fullName>Other_Sector4_Other__c</fullName>
    <label>Other - Sector4/Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>