force-app/main/default/objects/Antenna__c/fields/Other_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>Other_Sector_2__c</fullName>
    <label>Other - Sector 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>