force-app/main/default/objects/Antenna__c/fields/Primary_Contact_Address__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_Address__c</fullName>
    <label>Primary Contact Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>