force-app/main/default/objects/Antenna__c/fields/Primary_Contact_E_mail__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact_E_mail__c</fullName>
    <label>Primary Contact E-mail</label>
    <length>255</length>
    <type>Text</type>
</CustomField>