force-app/main/default/objects/Antenna__c/fields/Receive_Frequency_MHz_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>Receive_Frequency_MHz_Sector_2__c</fullName>
    <label>Receive Frequency (MHz) - Sector 2</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>