force-app/main/default/objects/Antenna__c/fields/Required_Voltage_and_Total_Amperage__c.field-meta.xml
<CustomField>
    <fullName>Required_Voltage_and_Total_Amperage__c</fullName>
    <label>Required Voltage and Total Amperage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>