force-app/main/default/objects/Antenna__c/fields/RET_Cable_Quantity_Sector_3__c.field-meta.xml
<CustomField>
    <fullName>RET_Cable_Quantity_Sector_3__c</fullName>
    <label>RET Cable Quantity - Sector 3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>