force-app/main/default/objects/Antenna__c/fields/RET_Dimensions_MW__c.field-meta.xml
<CustomField>
    <fullName>RET_Dimensions_MW__c</fullName>
    <label>RET Dimensions - MW</label>
    <length>255</length>
    <type>Text</type>
</CustomField>