force-app/main/default/objects/Antenna__c/fields/RET_Dimensions_Sector_1__c.field-meta.xml
<CustomField>
    <fullName>RET_Dimensions_Sector_1__c</fullName>
    <label>RET Dimensions - Sector 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>