force-app/main/default/objects/Antenna__c/fields/RET_Dimensions_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>RET_Dimensions_Sector_2__c</fullName>
    <label>RET Dimensions - Sector 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>