force-app/main/default/objects/Antenna__c/fields/RET_Dimensions_Sector_4_Other__c.field-meta.xml
<CustomField>
    <fullName>RET_Dimensions_Sector_4_Other__c</fullName>
    <label>RET Dimensions - Sector 4/Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>