force-app/main/default/objects/Antenna__c/fields/RET_Manufacturer_Model_S_4_Other__c.field-meta.xml
<CustomField>
    <fullName>RET_Manufacturer_Model_S_4_Other__c</fullName>
    <label>RET Manufacturer &amp; Model - S 4/Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>