force-app/main/default/objects/Antenna__c/fields/RET_Manufacturer_Model_Sector_2__c.field-meta.xml
<CustomField>
    <fullName>RET_Manufacturer_Model_Sector_2__c</fullName>
    <label>RET Manufacturer &amp; Model - Sector 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>